Add more tests (#63)
* add testing files

* Test Exchange

* add TestCallee and TestAutoTrader

* add trade, transfer tests

* add external exchange

* add liquidate

* fix flakey?

* fix more problems

* reset

* actually fix flakey

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,9 @@ jobs:
           name: Compile contracts
           command: npm run compile -- --all
       - run:
+          name: Compile contracts
+          command: npm run copy_tew
+      - run:
           name: Generate wrappers
           command: npm run build:wrappers
       - save_cache:
