--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "bignumber.js": "^8.0.2",
     "openzeppelin-solidity": "2.1.1",
     "web3": "1.0.0-beta.37",
-    "web3-utils": "^1.0.0-beta.37"
+    "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
     "@types/es6-promisify": "^6.0.0",
