--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run compile && npm run copy_tew && npm run build:wrappers",
     "copy_tew": "cp node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
     "compile": "node_modules/.bin/truffle compile",
-    "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/contracts/*.json'",
+    "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/contracts/*[^(Impl)].json'",
     "migrate": "truffle migrate",
     "develop": "truffle develop",
     "console": "truffle console",
@@ -25,7 +25,6 @@
     "lint:ts": "tslint --project . -t verbose 'src/**/*.ts'",
     "lint:sol": "solium -d contracts/",
     "lint:dydx": "python util/lintcontracts.py",
-    "codesize": "jq '.deployedBytecode' build/contracts/SoloMargin.json | wc -m",
     "coverage": "./node_modules/.bin/solidity-coverage",
     "node": "ganache-cli",
     "debug": "truffle debug",
