--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "migrate": "truffle migrate",
     "develop": "truffle develop",
     "console": "truffle console",
-    "lint": "npm run lint:ts && npm run lint:sol && npm run lint:dydx",
+    "lint": "npm run lint:ts && npm run lint:js && npm run lint:sol && npm run lint:dydx",
     "lint:ts": "tslint --project . -t verbose 'src/**/*.ts'",
+    "lint:js": "eslint --ext .js --ignore-path .gitignore migrations/**/*.js",
     "lint:sol": "solium -d contracts/",
     "lint:dydx": "python util/lintcontracts.py",
     "coverage": "./node_modules/.bin/solidity-coverage",
     "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && tsc",
-    "docker_node": "ganache-cli -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache -l 0x1fffffffffffff --allowUnlimitedContractSize",
+    "docker_node": "ganache-cli -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "clean_contract_json": "ts-node ./scripts/CleanBuild.ts",
     "deploy": "truffle migrate --network=$NETWORK --reset && npm run save_deployed_addresses",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
@@ -68,10 +69,15 @@
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^23.3.13",
     "@types/web3": "^1.0.18",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "dotenv": "^6.2.0",
     "es6-promisify": "^6.0.1",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.2",
     "ganache-cli": "^6.3.0",
     "jest": "^23.6.0",
