--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
     docker:
       - image: dydxprotocol/node:8.12-alpine-v1
       - image: trufflesuite/ganache-cli:v6.2.5
-        command: -d -i 1001 -l 0x1fffffffffffff --allowUnlimitedContractSize
+        command: -d -i 1001
     working_directory: ~/build
     parallelism: 3
     steps:
