--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Ethereum Smart Contracts for the dYdX Solo Trading Protocol",
   "main": "dist/js/src/index.js",
   "files": [
@@ -61,6 +61,7 @@
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.0.6",
     "bignumber.js": "^8.0.2",
+    "canonical-weth": "^1.3.1",
     "openzeppelin-solidity": "2.1.1",
     "web3": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
