Add Solidity Code Coverage (#115)
* working

* fix

* fi

* ci

* fi

* fix

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "npm run deploy_test && npm run test_only",
     "build": "npm run compile && npm run copy_tew && npm run build:wrappers",
     "copy_tew": "cp node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
+    "copy_tew_cov": "cp ./node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
     "compile": "node_modules/.bin/truffle compile",
     "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/contracts/*[^(Impl)].json'",
     "migrate": "truffle migrate",
@@ -36,12 +37,14 @@
     "deploy_kovan": "NETWORK=kovan npm run deploy",
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
     "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm",
-    "deploy_test_ci": "WS_NODE_URI=ws://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && WS_NODE_URI=ws://0.0.0.0:8545 npm run snapshot_test_evm",
+    "deploy_coverage": "RPC_NODE_URI=http://0.0.0.0:8555 npm run reset_test_evm && npm run migrate -- --network coverage --reset && RPC_NODE_URI=http://0.0.0.0:8555 npm run snapshot_test_evm",
+    "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
-    "ci_test": "NODE_ENV=test WS_NODE_URI=ws://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
+    "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://0.0.0.0:8555 npm run test_only -- --forceExit",
+    "ci_test": "NODE_ENV=test RPC_NODE_URI=http://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
     "snapshot_test_evm": "node scripts/snapshot-test-evm.js",
-    "install_compiler": "docker pull ethereum/solc:0.5.2",
+    "install_compiler": "docker pull ethereum/solc:0.5.3",
     "save_deployed_addresses": "ts-node ./scripts/SaveDeployedAddresses.ts"
   },
   "repository": {
@@ -59,7 +62,7 @@
   },
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
-    "@dydxprotocol/exchange-wrappers": "0.0.6",
+    "@dydxprotocol/exchange-wrappers": "0.0.8",
     "bignumber.js": "^8.0.2",
     "canonical-weth": "^1.3.1",
     "openzeppelin-solidity": "2.1.1",
@@ -83,7 +86,7 @@
     "ganache-cli": "^6.3.0",
     "jest": "^23.6.0",
     "mocha-junit-reporter": "^1.18.0",
-    "solidity-coverage": "^0.5.11",
+    "solidity-coverage": "https://github.com:rotcivegaf/solidity-coverage.git#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "^5.0.3",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
