--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-WS_NODE_URI=ws://0.0.0.0:8445
+RPC_NODE_URI=http://0.0.0.0:8445
 RESET_SNAPSHOT_ID=0x2
 KOVAN_NODE_URI=34.197.49.92
 KOVAN_NODE_PORT=8545
 KOVAN_ACCOUNT=0xa13cc3ab215bf669764a1a56a831c1bdc95659dd
+NETWORK_ID=1001
