--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "Ethereum Smart Contracts for the dYdX Solo Trading Protocol",
   "main": "dist/js/src/index.js",
   "files": [
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "npm run deploy_test && npm run test_only",
-    "build": "npm run compile && npm run copy_tew && npm run build:wrappers",
+    "build": "npm run compile && npm run copy_tew && npm run build:wrappers && npm run clean_contract_json",
     "copy_tew": "cp node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
     "copy_tew_cov": "cp ./node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
     "compile": "node_modules/.bin/truffle compile",
@@ -36,15 +36,15 @@
     "deploy": "truffle migrate --network=$NETWORK --reset && npm run save_deployed_addresses",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
-    "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm",
-    "deploy_coverage": "RPC_NODE_URI=http://0.0.0.0:8555 npm run reset_test_evm && npm run migrate -- --network coverage --reset && RPC_NODE_URI=http://0.0.0.0:8555 npm run snapshot_test_evm",
-    "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm",
+    "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm && npm run clean_contract_json",
+    "deploy_coverage": "RPC_NODE_URI=http://0.0.0.0:8555 npm run reset_test_evm && npm run migrate -- --network coverage --reset && RPC_NODE_URI=http://0.0.0.0:8555 npm run snapshot_test_evm && npm run clean_contract_json",
+    "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm && npm run clean_contract_json",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
     "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://0.0.0.0:8555 npm run test_only -- --forceExit",
     "ci_test": "NODE_ENV=test RPC_NODE_URI=http://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
     "snapshot_test_evm": "node scripts/snapshot-test-evm.js",
-    "install_compiler": "docker pull ethereum/solc:0.5.3",
+    "install_compiler": "docker pull ethereum/solc:0.5.4",
     "save_deployed_addresses": "ts-node ./scripts/SaveDeployedAddresses.ts"
   },
   "repository": {
