--- a/package.json
+++ b/package.json
@@ -66,13 +66,12 @@
     "bignumber.js": "^8.0.2",
     "canonical-weth": "^1.3.1",
     "openzeppelin-solidity": "2.1.2",
-    "web3": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "web3": "^1.0.0-beta.47",
+    "web3-utils": "^1.0.0-beta.47"
   },
   "devDependencies": {
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^23.3.13",
-    "@types/web3": "^1.0.18",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
