--- a/package.json
+++ b/package.json
@@ -62,38 +62,38 @@
   },
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
-    "@dydxprotocol/exchange-wrappers": "0.2.0",
-    "bignumber.js": "^8.0.2",
-    "canonical-weth": "^1.3.1",
-    "openzeppelin-solidity": "2.1.2",
+    "@dydxprotocol/exchange-wrappers": "0.2.1",
+    "bignumber.js": "^8.1.1",
+    "canonical-weth": "^1.4.0",
+    "openzeppelin-solidity": "2.1.3",
     "web3": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
     "@types/es6-promisify": "^6.0.0",
-    "@types/jest": "^23.3.13",
+    "@types/jest": "^24.0.9",
     "@types/web3": "^1.0.18",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.3",
     "dotenv": "^6.2.0",
     "es6-promisify": "^6.0.1",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "ethlint": "^1.2.2",
-    "ganache-cli": "^6.3.0",
-    "jest": "^23.6.0",
+    "ethlint": "^1.2.3",
+    "ganache-cli": "^6.4.0",
+    "jest": "^24.1.0",
     "mocha-junit-reporter": "^1.18.0",
-    "solidity-coverage": "https://github.com:rotcivegaf/solidity-coverage.git#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
-    "truffle": "^5.0.3",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.12.1",
+    "solidity-coverage": "git+https://github.com/rotcivegaf/solidity-coverage.git#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
+    "truffle": "^5.0.6",
+    "ts-jest": "^24.0.0",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.13.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-no-focused-test": "^0.5.0",
     "typechain": "^0.3.11",
-    "typescript": "^3.2.4"
+    "typescript": "^3.3.3333"
   }
 }
