--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dydxprotocol/solo",
   "version": "0.3.5",
-  "description": "Ethereum Smart Contracts for the dYdX Solo Trading Protocol",
+  "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/js/src/index.js",
   "files": [
     "dist/js/build/",
