--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.3",
-    "dotenv": "^6.2.0",
+    "dotenv-flow": "^0.2.0",
     "es6-promisify": "^6.0.1",
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -88,6 +88,7 @@
     "mocha-junit-reporter": "^1.18.0",
     "solidity-coverage": "git+https://github.com/rotcivegaf/solidity-coverage.git#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "^5.0.7",
+    "truffle-hdwallet-provider": "^1.0.6",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.1",
