--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "noUnusedLocals": true,
     "esModuleInterop": true,
+    "declaration": true,
     "declarationDir": "dist/types",
     "outDir": "dist/js",
     "resolveJsonModule": true,
