--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,9 @@ jobs:
       - run:
           name: Remove uncleaned contracts
           command: rm -rf ./build/contracts
+      - run:
+          name: Remove artifacts file
+          command: rm ./src/lib/Artifacts.ts
       - save_cache:
           key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
           paths:
