--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,9 +50,6 @@ jobs:
           name: Clean contract json
           command: npm run clean_contract_json
       - run:
-          name: Remove uncleaned contracts
-          command: rm -rf ./build/contracts
-      - run:
           name: Remove artifacts file
           command: rm ./scripts/*.ts
       - save_cache:
@@ -82,6 +79,9 @@ jobs:
       - run:
           name: Deploy Contracts
           command: npm run deploy_test_ci
+      - run:
+          name: Remove uncleaned contracts
+          command: rm -rf ./build/contracts
       - run:
           name: Test
           command: TESTFILES=$(circleci tests glob "__tests__/**/*.test.ts" | circleci tests split --split-by=filesize) && npm run ci_test -- ${TESTFILES}
@@ -118,7 +118,7 @@ jobs:
           key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Remove Development Files
-          command: rm -rf ./migrations ./__tests__ ./scripts
+          command: rm -rf ./migrations ./__tests__ ./scripts ./build/contracts
       - run:
           name: Compile Typescript
           command: npm run build:js
