--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,6 @@ jobs:
       - run:
           name: Generate wrappers
           command: npm run build:wrappers
-      - run:
-          name: Clean contract json
-          command: npm run clean_contract_json
       - save_cache:
           key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -76,6 +73,9 @@ jobs:
       - run:
           name: Deploy Contracts
           command: npm run deploy_test_ci
+      - run:
+          name: Remove uncleaned contracts
+          command: rm -rf ./build/contracts ./scripts/*.ts
       - run:
           name: Test
           command: TESTFILES=$(circleci tests glob "__tests__/**/*.test.ts" | circleci tests split --split-by=filesize) && npm run ci_test -- ${TESTFILES}
@@ -111,24 +111,16 @@ jobs:
       - restore_cache:
           key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
       - run:
+          name: Clean contract json
+          command: npm run clean_contract_json
+      - run:
+          name: Remove Development Files
+          command: rm -rf ./migrations ./__tests__ ./scripts ./build/contracts
+      - run:
           name: Compile Typescript
           command: npm run build:js
       - save_cache:
           key: cache-completed-build-js-{{ .Environment.CIRCLE_SHA1 }}
-          paths:
-            - ~/build
-  prod_build:
-    docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
-    working_directory: ~/build
-    steps:
-      - restore_cache:
-          key: cache-completed-build-js-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Production Build
-          command: sh scripts/prod_build.sh
-      - save_cache:
-          key: cache-completed-prod-build-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/build
   publish:
@@ -167,15 +159,8 @@ workflows:
       - build_js:
           requires:
             - build_contracts
-      - prod_build:
-          requires:
-            - build_js
-          filters:
-            branches:
-              only: master
       - publish:
           requires:
-            - prod_build
             - test
             - lint
           filters:
