--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,8 +63,8 @@ jobs:
   test:
     docker:
       - image: dydxprotocol/node:8.12-alpine-v1
-      - image: trufflesuite/ganache-cli:v6.2.5
-        command: -d -i 1001
+      - image: trufflesuite/ganache-cli:v6.4.1
+        command: -d -k=petersburg -i 1001
     working_directory: ~/build
     parallelism: 3
     steps:
