Fix testing/coverage (#267)
* fix testing

* bump exchange-wrappers

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && tsc",
-    "docker_node": "ganache-cli -i 1313 -d -k -p 8545 -h 0.0.0.0 --db=/home/.ganache",
+    "docker_node": "ganache-cli -i 1313 -d -k=petersburg -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "clean_contract_json": "ts-node ./scripts/CleanBuild.ts",
     "deploy": "truffle migrate --network=$NETWORK --reset && npm run save_deployed_addresses",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
@@ -64,7 +64,7 @@
   },
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
-    "@dydxprotocol/exchange-wrappers": "0.2.7",
+    "@dydxprotocol/exchange-wrappers": "0.2.8",
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
     "openzeppelin-solidity": "2.1.3",
@@ -86,11 +86,11 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.3",
-    "ganache-cli": "^6.4.0",
+    "ganache-cli": "6.4.1",
     "jest": "^24.1.0",
     "mocha-junit-reporter": "^1.18.0",
     "solidity-coverage": "git+https://github.com/rotcivegaf/solidity-coverage.git#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
-    "truffle": "^5.0.7",
+    "truffle": "^5.0.21",
     "truffle-hdwallet-provider": "^1.0.6",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
