--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
-  "main": "dist/js/src/index.js",
-  "types": "dist/types/src/types.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "files": [
-    "dist/js/build/",
-    "dist/js/src/",
-    "dist/types/src/",
+    "dist/build/",
+    "dist/src/",
     "build/wrappers/",
     "src/",
     "LICENSE",
