--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "es6-promisify": "^6.0.1",
     "ethers": "^4.0.33",
     "openzeppelin-solidity": "2.1.3",
-    "web3": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "web3": "1.2.1"
   },
   "devDependencies": {
     "@types/es6-promisify": "^6.0.0",
