--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -63,15 +63,14 @@
   },
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
-    "@dydxprotocol/exchange-wrappers": "0.4.0",
+    "@dydxprotocol/exchange-wrappers": "0.5.0",
     "@types/web3": "^1.0.18",
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
     "ethers": "^4.0.33",
     "openzeppelin-solidity": "2.1.3",
-    "web3": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "web3": "1.2.1"
   },
   "devDependencies": {
     "@types/es6-promisify": "^6.0.0",
@@ -91,7 +90,7 @@
     "mocha-junit-reporter": "^1.18.0",
     "solidity-coverage": "0.6.2",
     "truffle": "^5.0.28",
-    "truffle-hdwallet-provider": "^1.0.14",
+    "truffle-hdwallet-provider": "^1.0.16",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.1",
