--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
   test:
     docker:
       - image: dydxprotocol/node:8.12-alpine-v1
-      - image: trufflesuite/ganache-cli:v6.4.1
+      - image: trufflesuite/ganache-cli:v6.7.0-beta.0
         command: -d -k=petersburg -i 1001
     working_directory: ~/build
     parallelism: 3
