--- a/package.json
+++ b/package.json
@@ -87,11 +87,11 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.4",
-    "ganache-cli": "6.4.1",
+    "ganache-cli": "6.7.0-beta.0",
     "jest": "^24.1.0",
     "mocha-junit-reporter": "^1.18.0",
     "solidity-coverage": "0.6.2",
-    "truffle": "^5.0.28",
+    "truffle": "^5.0.34",
     "truffle-hdwallet-provider": "^1.0.16",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
