--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
   "devDependencies": {
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.9",
+    "@types/lodash": "^4.14.138",
+    "@types/request-promise-native": "^1.0.16",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
