--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
     "ethers": "^4.0.33",
+    "lodash": "^4.17.14",
     "openzeppelin-solidity": "2.1.3",
     "query-string": "^6.8.2",
     "request-promise-native": "^1.0.7",
