--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.23.1",
+  "version": "0.24.0",
   "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -65,19 +65,19 @@
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.5.0",
     "@types/web3": "^1.0.18",
+    "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
     "ethers": "^4.0.33",
     "openzeppelin-solidity": "2.1.3",
     "query-string": "^6.8.2",
-    "request-promise-native": "^1.0.7",
     "web3": "1.2.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.9",
-    "@types/request-promise-native": "^1.0.16",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
