--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.24.0",
+  "version": "0.24.1",
   "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -64,7 +64,7 @@
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.5.0",
-    "@types/web3": "^1.0.18",
+    "@types/web3": "1.0.18",
     "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
