--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   ganache:
-    image: trufflesuite/ganache-cli:v6.8.1
+    image: trufflesuite/ganache-cli:v6.9.0
     ports:
       - 8445:8545
-    command: ganache-cli -d -k=istanbul -i 1001
+    command: ganache-cli -d -i 1001
