--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && tsc && cp -r build/wrappers dist/build",
-    "docker_node": "ganache-cli -i 1313 -d -k=petersburg -p 8545 -h 0.0.0.0 --db=/home/.ganache",
+    "docker_node": "ganache-cli -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "clean_contract_json": "ts-node ./scripts/CleanBuild.ts",
     "deploy": "truffle migrate --network=$NETWORK --reset && npm run save_deployed_addresses",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
@@ -89,7 +89,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.4",
-    "ganache-cli": "6.8.1",
+    "ganache-cli": "6.9.0",
     "jest": "^24.1.0",
     "mocha-junit-reporter": "^1.18.0",
     "solidity-coverage": "0.6.7",
