CircleCI node to v10.16.3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   checkout_and_install:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
     working_directory: ~/build
     steps:
       - checkout
@@ -24,7 +24,7 @@ jobs:
             - ~/build
   build_contracts:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
     working_directory: ~/build
     steps:
       - restore_cache:
@@ -52,7 +52,7 @@ jobs:
             - ~/build
   lint:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
     working_directory: ~/build
     steps:
       - restore_cache:
@@ -62,7 +62,7 @@ jobs:
           command: npm run lint
   test:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
       - image: trufflesuite/ganache-cli:v6.8.1
         command: -d -k=istanbul -i 1001
     working_directory: ~/build
@@ -86,7 +86,7 @@ jobs:
           path: ~/build/junit
   coverage:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
     working_directory: ~/build
     steps:
       - restore_cache:
@@ -105,7 +105,7 @@ jobs:
           no_output_timeout: 60m
   build_js:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
     working_directory: ~/build
     steps:
       - restore_cache:
@@ -125,7 +125,7 @@ jobs:
             - ~/build
   publish:
     docker:
-      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/node:10.16.3-alpine
     working_directory: ~/build
     steps:
       - restore_cache:
