Upgrade solidity-coverage to 0.7.1

--- a/package.json
+++ b/package.json
@@ -27,20 +27,21 @@
     "lint:js": "eslint --ext .js --ignore-path .gitignore migrations/**/*.js",
     "lint:sol": "solium -d contracts/",
     "lint:dydx": "python util/lintcontracts.py",
-    "coverage": "./node_modules/.bin/solidity-coverage",
+    "coverage": "node scripts/coverage.js",
     "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && tsc && cp -r build/wrappers dist/build",
+    "build:cov": "npm run copy_tew && npm run build:wrappers && npm run clean_contract_json",
     "docker_node": "ganache-cli -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "clean_contract_json": "ts-node ./scripts/CleanBuild.ts",
     "deploy": "truffle migrate --network=$NETWORK --reset && npm run save_deployed_addresses",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
     "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm && npm run clean_contract_json",
-    "deploy_coverage": "RPC_NODE_URI=http://0.0.0.0:8555 npm run reset_test_evm && npm run migrate -- --network coverage --reset && RPC_NODE_URI=http://0.0.0.0:8555 npm run snapshot_test_evm && npm run clean_contract_json",
+    "deploy_coverage": "RPC_NODE_URI=http://127.0.0.1:8555 npm run reset_test_evm && COVERAGE=true npm run migrate -- --network coverage && RPC_NODE_URI=http://127.0.0.1:8555 npm run snapshot_test_evm && npm run clean_contract_json",
     "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm && npm run clean_contract_json",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
-    "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://0.0.0.0:8555 npm run test_only -- --forceExit",
+    "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://127.0.0.1:8555 npm run test_only -- --forceExit --verbose",
     "ci_test": "NODE_ENV=test RPC_NODE_URI=http://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
     "snapshot_test_evm": "node scripts/snapshot-test-evm.js",
@@ -76,6 +77,7 @@
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "@truffle/config": "^1.2.14",
     "@types/axios": "^0.14.0",
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.9",
@@ -92,8 +94,9 @@
     "ganache-cli": "6.9.0",
     "jest": "^24.1.0",
     "mocha-junit-reporter": "^1.18.0",
-    "solidity-coverage": "0.6.7",
-    "truffle": "^5.0.34",
+    "ora": "^4.0.3",
+    "solidity-coverage": "^0.7.1",
+    "truffle": "^5.1.12",
     "truffle-hdwallet-provider": "^1.0.16",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
