--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.33.3",
+  "version": "0.33.4",
   "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -66,6 +66,7 @@
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.5.3",
     "@types/web3": "1.0.18",
+    "@types/luxon": "^1.21.0",
     "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
