--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "files": [
-    "dist/build/",
+    "dist/build/published_contracts/",
+    "dist/build/wrappers/",
     "dist/src/",
-    "build/wrappers/",
-    "src/",
     "LICENSE",
     "README.md"
   ],
