--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@dydxprotocol/solo",
-  "version": "0.34.0",
+  "version": "0.35.0",
   "description": "Ethereum Smart Contracts and TypeScript library used for the dYdX Solo-Margin Trading Protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "files": [
-    "dist/build/",
+    "dist/build/published_contracts/",
+    "dist/build/wrappers/",
     "dist/src/",
-    "build/wrappers/",
-    "src/",
     "LICENSE",
     "README.md"
   ],
