--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,14 +38,8 @@ jobs:
           name: Install Compiler
           command: npm run install_compiler
       - run:
-          name: Compile contracts
-          command: npm run compile -- --all
-      - run:
-          name: Compile contracts
-          command: npm run copy_tew
-      - run:
-          name: Generate wrappers
-          command: npm run build:wrappers
+          name: Build
+          command: npm run build
       - save_cache:
           key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
           paths:
