--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,14 +38,8 @@ jobs:
           name: Install Compiler
           command: npm run install_compiler
       - run:
-          name: Compile contracts
-          command: npm run compile -- --all
-      - run:
-          name: Compile contracts
-          command: npm run copy_tew
-      - run:
-          name: Generate wrappers
-          command: npm run build:wrappers
+          name: Build
+          command: npm run build
       - save_cache:
           key: cache-completed-build-contracts-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -74,8 +68,8 @@ jobs:
           name: Deploy Contracts
           command: npm run deploy_test_ci
       - run:
-          name: Remove uncleaned contracts
-          command: rm -rf ./build/contracts ./scripts/*.ts
+          name: Remove unused scripts
+          command: rm -rf ./scripts/*.ts
       - run:
           name: Test
           command: TESTFILES=$(circleci tests glob "__tests__/**/*.test.ts" | circleci tests split --split-by=filesize) && npm run ci_test -- ${TESTFILES}
