--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dydxprotocol/solo"
+    "url": "https://github.com/dolomite-exchange/solo"
   },
   "keywords": [
     "dydx",
@@ -65,6 +65,7 @@
   "homepage": "https://github.com/dydxprotocol/solo#readme",
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.5.3",
+    "@truffle/hdwallet-provider": "^1.0.35",
     "@types/web3": "1.0.18",
     "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
