--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "reset_test_evm": "node scripts/reset-test-evm.js",
     "snapshot_test_evm": "node scripts/snapshot-test-evm.js",
     "install_compiler": "docker pull ethereum/solc:0.5.7",
-    "save_deployed_addresses": "ts-node ./scripts/SaveDeployedAddresses.ts",
-    "serve_docs": "docsify serve ./docs"
+    "save_deployed_addresses": "ts-node ./scripts/SaveDeployedAddresses.ts"
   },
   "repository": {
     "type": "git",
@@ -85,7 +84,6 @@
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.3",
-    "docsify-cli": "^4.3.0",
     "dotenv-flow": "^0.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
