Fixed up liquidator tests and some minor source code changes to go along with it

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -12,6 +12,12 @@ rules:
   no-use-before-define: 0
   class-methods-use-this: 0
   no-underscore-dangle: 0
+  no-undef: off
+  import/no-unresolved: off
+  prefer-destructuring: off
+  no-console: off
+  max-line-length: 200
+  camelcase: off
   max-len:
     - error
-    - 100
+    - 150
