--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dolomite-exchange/v2-protocol",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Ethereum Smart Contracts and TypeScript library used for the Dolomite Margin Trading Protocol",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -8,6 +8,7 @@
     "dist/build/published_contracts/",
     "dist/build/wrappers/",
     "dist/src/",
+    "build/contracts",
     "LICENSE",
     "README.md"
   ],
