--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "snapshot_test_evm": "node scripts/snapshot-test-evm.js",
     "install_compiler": "docker pull ethereum/solc:0.5.7",
     "save_deployed_addresses": "ts-node ./scripts/SaveDeployedAddresses.ts",
-    "serve_docs": "docsify serve ./docs"
+    "serve_docs": "docsify serve ./docs",
+    "use_node_version": "nvm use 10.23.0"
   },
   "repository": {
     "type": "git",
